@@ -413,10 +413,7 @@ class MigrateCommand extends CConsoleCommand
 		if($this->_db!==null)
 			return $this->_db;
 		else if(($this->_db=Yii::app()->getComponent($this->connectionID)) instanceof CDbConnection)
-		{
-			$this->_db->setActive(true);
 			return $this->_db;
-		}
 		else
 			die("Error: CMigrationCommand.connectionID '{$this->connectionID}' is invalid. Please make sure it refers to the ID of a CDbConnection application component.\n");
 	}
